--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <div class="m-2 " >
     <header class="w-full h-20 flex items-center md:px-2 ">
     <div class="w-full flex justify-between"> 
-       <div class="flex items-center bg-gray-100 rounded-md md:w-1/3">
+       <div id="srch" class="flex items-center bg-gray-100 rounded-md md:w-1/3">
         <!-- search icon -->
          <img class="h-4  m-1" src="./clipart163647.png" alt="">
           <input class="md:w-full border-0 focus:outline-none  " type="search" id="search" placeholder="Search">
@@ -19,14 +19,14 @@
      
         <div class="flex gap-2">
               <!-- button -->
-            <div  class="bg-blue-600 rounded-md md:py-1 md:px-2 text-white">
+            <div  class="bg-blue-600 rounded-md sm:px-2  py-1  text-white">
                 <button> <a href="./form.html"> + Add product</a></button>
             </div>
-            <div class="border rounded-md md:p-1">
+            <div class="border rounded-md  sm:px-2  py-1">
                 <label for="action">Actions</label>
                 <select name="action" id="action"></select>
             </div>
-            <div class="border rounded-md md:p-1">
+            <div class="border rounded-md  sm:px-2  py-1">
                 <label for="filter">Filter</label>
                 <select name="filter" id="filter"></select>
             </div>
