--- a/form.html
+++ b/form.html
@@ -114,10 +114,10 @@
 
     <div class="pt-4">
       <button type="submit"
-              class="bg-blue-600 text-white text-sm font-medium px-6 py-2 rounded-md hover:bg-blue-700 transition">
+              class="bg-blue-600 text-white text-sm font-medium px-6 py-2 rounded-md hover:bg-blue-900 transition">
         Add
       </button>
-      <button class="bg-green-700 text-white text-sm font-medium px-6 py-2 rounded-md hover:bg-blue-700 transition" type="button"><a href="./index.html">cancel</a></button>
+      <button class="bg-green-700 text-white text-sm font-medium px-6 py-2 rounded-md hover:bg-green-900 transition" type="button"><a href="./index.html">cancel</a></button>
     </div>
   </form>
 
