--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
-<body id="body">
+<body id="body" class="min-h-screen">
    <div class="m-2 " >
     <header class="w-full h-20 flex items-center md:px-2 ">
     <div class="w-full flex justify-between"> 
@@ -34,8 +34,8 @@
         </div>
     </div>
    </header>
-   <main class="w-full h-auto flex items-center md:px-2 ">
-    <table class="w-full">
+   <main class="w-full h-full flex items-center md:px-2 ">
+    <table class="w-full h-full">
        
            <thead class="bg-gray-50 font-medium ">
             <tr class="h-16">
