--- a/form.html
+++ b/form.html
@@ -117,7 +117,7 @@
               class="bg-blue-600 text-white text-sm font-medium px-6 py-2 rounded-md hover:bg-blue-900 transition">
         Add
       </button>
-      <button class="bg-green-700 text-white text-sm font-medium px-6 py-2 rounded-md hover:bg-green-900 transition" type="button"><a href="./index.html">cancel</a></button>
+      <a href="./index.html"><button class="bg-green-700 text-white text-sm font-medium px-6 py-2 rounded-md hover:bg-green-900 transition" type="button">cancel</button></a>
     </div>
   </form>
 
